--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -61,7 +61,7 @@
     <table class="content-table" id="content-table">
         <thead>
             <tr>
-                <th>Startup</th>
+                <th>Startup Name</th>
                 <th>Email</th>
                 <th>Startup Nature</th>
                 <th>Date of Investing</th>
