--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -13,9 +13,9 @@
              <div class="col-md-4 mt-1">
                  <div class="card text-center sidebar">
                    <div class="card-body">
-                       <img src="/images/broker.png" class="rounded-circle" width="150">
+                       <img src="https://png.pngtree.com/png-clipart/20190924/original/pngtree-user-vector-avatar-png-image_4830521.jpg" class="rounded-circle" width="150">
                      <div class="mt-3">
-                         <a href="">Investor Account</a>
+                         <a href="">{{compName}}</a>
                     </div>
                   </div>
                 </div>
