error modal added

--- a/views/account_startup.hbs
+++ b/views/account_startup.hbs
@@ -5,7 +5,7 @@
 
 <body>
     {{> _header}}
-   <div class="container">
+   <div class="container-account">
        <div class="main">
            </div>
            <div class="row">
