--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -319,5 +319,28 @@ input, select, textarea {
   label {
       margin-bottom: 4px;
   }
-
- 
+  .ShowHide {
+    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #7851AE;
+    color: #FFFFFF;
+    padding:4px;
+  }
+  #left {
+    overflow: hidden;
+    text-align: center;
+    height: 20px;
+  }
+  #right {
+    float: right;
+    width: 30px;
+    height: 20px;
+    text-align: center;
+  }
+  .ShowHide a {
+     color: #FFFFFF;
+     text-decoration: none;
+  }
+  .ShowHide a:hover {
+     text-decoration:underline;
+  }
