--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -6,7 +6,7 @@
 
 <body>
     {{> _header}}
-   <div class="container">
+   <div class="container-account">
        <div class="main">
            </div>
            <div class="row">
