--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/landing.css">
-    <link rel="icon" type="image/png" href="/images/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://indiadatahub.com/static/svg/Startup.svg" />
     
-    <title>Auth Landing</title>
+    <link rel="stylesheet" href="/css/landing.css">
+    <title>SmartStart</title>
 </head>
 
 <body>
   {{> _header}}
   <div class="container">
-    <img class="cover" src="images/cover1.jpg">
+    <img class="cover" src="images/cover.png">
     <!-- Slideshow container -->
     <div class="slideshow-container">
 
@@ -26,13 +26,13 @@
     
         <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="images/startup3.jpg" style="width:100%">
+        <img src="images/startup2.png" style="width:100%">
         <div class="text-1">Caption Two</div>
         </div>
     
         <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="images/startup4.jpg" style="width:100%">
+        <img src="images/startup3.png" style="width:100%">
         <div class="text-1">Caption Three</div>
         </div>
     
@@ -46,7 +46,7 @@
 
   <div class="zone blue grid-wrapper">
       <div class="card zone">
-          <img src="/images/openly.jpg">
+          <img src="/images/openly.png">
           <div class="text">
               <h1>Openly</h1>
               <p>SmartStart helped our company tp gain investors and helped to deliver our product to deliver our product to audience</p>
@@ -60,7 +60,7 @@
             <button>Learn more</button>
         </div>
     </div>
-    <div class="card zone"><img src="/images/startup3.jpg">
+    <div class="card zone"><img src="/images/synnotech.png">
         <div class="text">
             <h1>Synnotech</h1>
             <p>Helped the company to attract investors</p>
