--- a/views/account_intern.hbs
+++ b/views/account_intern.hbs
@@ -16,7 +16,7 @@
                    <div class="card-body">
                        <img src="https://png.pngtree.com/png-vector/20191104/ourmid/pngtree-businessman-avatar-cartoon-style-png-image_1953664.jpg" class="rounded-circle" width="150">
                      <div class="mt-3">
-                         <a href="">{{internName}}</a>
+                        {{internName}}
                     </div>
                   </div>
                 </div>
