--- a/views/account_investor.hbs
+++ b/views/account_investor.hbs
@@ -15,7 +15,7 @@
                    <div class="card-body">
                        <img src="https://png.pngtree.com/png-clipart/20190924/original/pngtree-user-vector-avatar-png-image_4830521.jpg" class="rounded-circle" width="150">
                      <div class="mt-3">
-                         <a href="">{{compName}}</a>
+                        {{compName}}
                     </div>
                   </div>
                 </div>
