--- a/public/css/login_form_styles.css
+++ b/public/css/login_form_styles.css
@@ -2,14 +2,12 @@ body{
     margin:0;
     padding:0;
     font-family:Arial;
-    background-color: #1CADA0;
-    background-image:url("cover_startup.jpeg");
-    background-position:center;
-    background-size: cover;
+    background-color: #13547a;
+    background-image:linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
-.container{
+.container-login{
     position:absolute;
-    background-color: black;
+    background-image:linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
