--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-login">
     <div class="center">
         <h1>Login</h1>
         <form action="/loginForm/login" method="post">
