--- a/public/css/Account.css
+++ b/public/css/Account.css
@@ -10,7 +10,7 @@ body{
 }
 
 .topbar{
-   background-color: #7851ae;
+   background-color: #DFD3EB;
    overflow: hidden;
 
 }
@@ -86,5 +86,5 @@ h1{
 }
 
 .content-table tbody tr:last-of-type {
-   border-bottom: 2px solid #009879;
+   border-bottom: 2px solid #7851AE;
 }
