--- a/public/css/login_form_styles.css
+++ b/public/css/login_form_styles.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding:0;
     font-family:Arial;
-    background-color: #13547a;
+    background-color: #DFD3EB;
     background-image:linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 .container-login{
@@ -62,14 +62,14 @@ form .txt_field{
     left:0;
     width:0%;
     height:2px;
-    background: #2691d9;
+    background: #7851AE;
     transition: .5s;
 }
 .txt_field input:focus ~label,
 .txt_field input:not(:placeholder-shown):invalid ~label,
 .txt_field input:valid ~label{
     top:-5px;
-    color:#2691d9;
+    color:#7851AE;
 }
 .txt_field input:focus ~span::before{
     width: 100%;
@@ -87,7 +87,7 @@ input[type="submit"]{
     width:100%;
     height:50px;
     border:1 px solid;
-    background:#2691d9;
+    background:#7851AE;;
     border-radius: 25px;
     font-size:18px;
     color:#e9f4fb;
@@ -97,7 +97,7 @@ input[type="submit"]{
 
 }
 button:hover{
-    border-color: #2691d9;
+    border-color: #3d255e;;
     transition:.5s;
 }
 .signup_link{
@@ -107,7 +107,7 @@ button:hover{
     color:#666666;
 }
 .signup_link a{
-    color:#2691d9;
+    color:#7851AE;;
     text-decoration: none;
 }
 .signup_link a:hover{
