--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
 
 <body>
     {{> _err}}
-    <div class="container">
+    <div class="container-login">
     <div class="center">
         <h1>Login</h1>
         <form action="/loginForm/login" method="post">
