--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/landing.css">
-    <link rel="icon" type="image/png" href="/images/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://indiadatahub.com/static/svg/Startup.svg" />
     
-    <title>Auth Landing</title>
+    <link rel="stylesheet" href="/css/landing.css">
+    <title>SmartStart</title>
 </head>
 
 <body>
   {{> _err}}
   {{> _header}}
   <div class="container">
-    <img class="cover" src="images/cover1.jpg">
-    
+    <img class="cover" src="images/cover.png">
     <!-- Slideshow container -->
     <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
@@ -27,13 +26,13 @@
     
         <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="images/startup3.jpg" style="width:100%">
+        <img src="images/startup2.png" style="width:100%">
         <div class="text-1">Caption Two</div>
         </div>
     
         <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="images/startup4.jpg" style="width:100%">
+        <img src="images/startup3.png" style="width:100%">
         <div class="text-1">Caption Three</div>
         </div>
     
@@ -47,7 +46,7 @@
 
   <div class="zone blue grid-wrapper">
       <div class="card zone">
-          <img src="/images/openly.jpg">
+          <img src="/images/openly.png">
           <div class="text">
               <h1>Openly</h1>
               <p>SmartStart helped our company tp gain investors and helped to deliver our product to deliver our product to audience</p>
@@ -61,7 +60,7 @@
             <button>Learn more</button>
         </div>
     </div>
-    <div class="card zone"><img src="/images/startup3.jpg">
+    <div class="card zone"><img src="/images/synnotech.png">
         <div class="text">
             <h1>Synnotech</h1>
             <p>Helped the company to attract investors</p>
@@ -79,16 +78,19 @@
             <p>9856542112</p>
         </div>
         <div>
-            <form>
-    
+            <form action="submit-data" method="post">
+              {{#if msg}}
+                <p>Your query has been sent!</p>
+              {{/if}}
+
               <label for="fname">Full Name</label>
-              <input required type="text" id="fname" name="firstname" placeholder="Your name..">
+              <input required type="text" id="fname" name="name" placeholder="Your name..">
           
               <label for="lname">E-mail</label>
-              <input required type="email" id="lname" name="lastname" placeholder="Your e-mail address..">
+              <input required type="email" id="lname" name="email" placeholder="Your e-mail address..">
           
               <label for="subject">Message</label>
-              <textarea required id="subject" name="subject" placeholder="Write something.." style="height:100px"></textarea>
+              <textarea required id="subject" name="message" placeholder="Write something.." style="height:100px"></textarea>
           
               <input type="submit" value="Submit">
           
@@ -96,5 +98,5 @@
         </div>
       </div>
     </footer>
-    <script src="/js/index.js"></script>
+  <script src="/js/index.js"></script>
 </div>
