--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,6 +67,21 @@
             <button>Learn more</button>
         </div>
     </div>
+          <div class="card zone">
+          <img src="/images/openly.png">
+          <div class="text">
+              <h1>Openly</h1>
+              <p>SmartStart helped our company tp gain investors and helped to deliver our product to deliver our product to audience</p>
+              <button>Learn more</button>
+          </div>
+      </div>
+    <div class="card zone"><img src="/images/broker.png">
+        <div class="text">
+            <h1>Brokers</h1>
+            <p>Helped our startup to gain talented interns and attracted trust-worthy investors</p>
+            <button>Learn more</button>
+        </div>
+    </div>
   </div>
   <footer class="zone">
     <div class="footer-container flex">
