--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -67,7 +67,7 @@
             <li><a href="/account">Dashboard</a></li>
         {{/if}}
         
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/#footer-contact">Contact</a></li>
         <li class="push"><a href="{{headerData.link}}">{{headerData.label}}</a></li>
     </ul>
 </nav>
